yaml_examples/nginx/nginx-internal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-test-internal-ingress
  labels:
    app: nginx-test
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:517727162249:certificate/5a339d5d-db91-409b-b65e-e6761cc25d17
    # dev-internal_elb-web-sg - sg-0fc1f3c77e0e0a21a
    alb.ingress.kubernetes.io/security-groups: dev-internal_elb-web-sg
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
    # 192.168.0.0/16 - office
    alb.ingress.kubernetes.io/conditions.ssl-redirect: >
      [{"field":"source-ip","sourceIpConfig":{"values":["192.168.0.0/16"]}}]
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: dev-private-internal_lb-2a-subnet,dev-private-internal_lb-2b-subnet,dev-private-internal_lb-2c-subnet
spec:
  rules:
    - host: sample-nginx-test.dev.dailyhotel.in
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: nginx-test
              servicePort: 80
